updated fmi3